# Sitara

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  compose.yaml
apps/api/: Dockerfile  manage.py  pyproject.toml  requirements.in  requirements.txt
apps/api/config/: celery.py  correlation.py  logging.py  middleware.py  sentry.py  settings.py  spectacular.py  urls.py
apps/api/openapi/: schema.json
apps/api/sitara/: content_safety.py  image_sanitize.py  schema.py  test_observability.py  test_openapi_contract.py  test_security_headers.py  test_settings_validation.py
apps/api/sitara/accounts/: admin.py  apps.py  csrf.py  migration_utils.py  models.py  openapi.py  rate_limits.py  test_auth.py  tests.py  urls.py  validation.py  views.py
apps/api/sitara/ai_gateway/: anthropic_provider.py  apps.py  image_generation.py  policy.py  providers.py  replicate_provider.py  structured_design.py  test_image_generation.py  tests.py
apps/api/sitara/catalogue/: admin.py  apps.py  forms.py  image_processing.py  models.py  openapi.py  serializers.py  services.py  urls.py  views.py
apps/api/sitara/designs/: admin.py  apps.py  jobs.py  models.py  openapi.py  ownership.py  result.py  serializers.py  services.py  urls.py  views.py
apps/api/sitara/generation/: admission.py  apps.py  context.py  cost_accounting.py  cost_control.py  design_spec.py  errors.py  fixture_provider.py  image_download.py  image_fixtures.py  input_safety.py  inspiration_context.py  maintenance.py  pipeline.py  prompt_builder.py  prompt_service.py  prompt_snapshots.py  prompting.py  (+6 more)
experiments/model-eval/: .env.example  .gitignore  README.md  TERMS_SNAPSHOT.md  pyproject.toml
experiments/model-eval/configs/: candidate_smoke.yaml  finalists.yaml  model_candidates.yaml  screening.yaml  seed_stability.yaml  smoke.yaml
experiments/model-eval/prompts/: briefs.yaml
experiments/model-eval/references/: README.md  manifest.example.yaml  manifest.yaml
experiments/model-eval/tests/: conftest.py  test_budget.py  test_config.py  test_contact_sheet.py  test_costs.py  test_crash_resume.py  test_model_decision.py  test_prompt_formats.py  test_prompt_matrix.py  test_rate_limit.py  test_result_store.py  test_retry.py  test_review_gate.py  test_review_scope.py  test_runner_dry_run.py
(+372 files in other folders)
