[project]
name = "sitara-api"
version = "0.1.0"
description = "Sitara API — AI-assisted South Asian bridalwear concept design (backend)"
requires-python = ">=3.12"

# Dependency workflow: direct dependencies live in requirements.in;
# requirements.txt is the fully-pinned, hash-verified lock compiled from it
# with pip-tools (see requirements.in for the regeneration command). Docker
# and CI install ONLY from the lock, with --require-hashes; CI fails when
# the lock is stale relative to requirements.in.

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.ruff.lint.isort]
known-first-party = ["config", "sitara"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
testpaths = ["sitara"]
addopts = "-q"
